# climate-trydan

./: .gitignore  README.rst  pyproject.toml  requirements.txt
climate_trydan/: app.py
climate_trydan/.streamlit/: config.toml
climate_trydan/data/nordpoolgroup/consumption_hourly/: consumption-per-country_2013_hourly.xls  consumption-per-country_2014_hourly.xls  consumption-per-country_2015_hourly.xls  consumption-per-country_2016_hourly.xls  consumption-per-country_2017_hourly.xls  consumption-per-country_2018_hourly.xls  consumption-per-country_2019_hourly.xls  consumption-per-country_2020_hourly.xls
climate_trydan/data/nordpoolgroup/production_hourly/: production-per-country_2013_hourly.xls  production-per-country_2014_hourly.xls  production-per-country_2015_hourly2.xls  production-per-country_2016_hourly3.xls  production-per-country_2017_hourly2.xls  production-per-country_2018_hourly.xls  production-per-country_2019_hourly3.xls  production-per-country_2020_hourly3.xls
climate_trydan/data/nordpoolgroup/windpower_daily/: wind-power-per-country_2013_daily.xls  wind-power-per-country_2014_daily.xls  wind-power-per-country_2015_daily.xls  wind-power-per-country_2016_daily.xls  wind-power-per-country_2017_daily.xls  wind-power-per-country_2018_daily.xls  wind-power-per-country_2019_daily.xls  wind-power-per-country_2020_daily.xls
climate_trydan/data/processed/: denmark_market_data.csv  elspot_daily.csv  elspot_monthly.csv
climate_trydan/playground/: climate_data_prototype.ipynb
tests/: test_climate_trydan.py
