[tool.poetry]
name = "climate-trydan"
version = "0.1.0"
description = ""
authors = ["yash <yaswanthbangaru13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
jupyter = "^1.0.0"
ipykernel = "^6.6.1"
lxml = "^4.7.1"
plotly = "^5.5.0"
streamlit = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
mypy = "^0.930"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

